[gd_scene load_steps=4 format=2]

[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://TestScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="TestScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.735107
margin_bottom = 0.735107
color = Color( 0.807843, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fields" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 206.0
custom_constants/separation = 60
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IsOnGotM" type="Label" parent="Fields"]
margin_top = 63.0
margin_right = 206.0
margin_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "On GotM: false"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoggedIn" type="Label" parent="Fields"]
margin_top = 152.0
margin_right = 206.0
margin_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Logged In: false"

[node name="Username" type="Label" parent="Fields"]
margin_top = 241.0
margin_right = 206.0
margin_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Username: ?"

[node name="InLobby" type="Label" parent="Fields"]
margin_top = 330.0
margin_right = 206.0
margin_bottom = 359.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "In Lobby: ?"

[node name="IsHost" type="Label" parent="Fields"]
margin_top = 419.0
margin_right = 206.0
margin_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Host Is: ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberInLobby" type="Label" parent="Fields"]
margin_top = 508.0
margin_right = 206.0
margin_bottom = 537.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Players In Lobby: 0"

[node name="SelectColor" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -242.032
margin_top = -325.977
margin_right = -97.0321
margin_bottom = -296.977
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "Select Color:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -270.364
margin_top = -286.111
margin_right = -68.3635
margin_bottom = -130.111

[node name="SendColor" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -281.072
margin_top = -120.258
margin_right = -58.0723
margin_bottom = -24.258
text = "Send Color"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SendColor" to="." method="_on_SendColor_pressed"]
